--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-validator": "^0.14.1",
     "jimp": "^0.22.12",
     "lodash": "^4.17.21",
+    "puppeteer-core": "^22.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
