--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.620.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "jimp": "^0.22.12",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "puppeteer-core": "^22.14.0",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +44,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/jimp": "^0.2.28",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
